--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/Motiva%20Sans%20Test.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/typicons.min.css">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
@@ -29,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav navbar-nav-scroll ms-auto">
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="font-size: 18px;color: #ad95ed;" target="_top">| Home |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="font-size: 18px;color: #ad95ed;" target="_top">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Guides</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Documentation</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Download<br></a></li>
@@ -43,7 +44,7 @@
     <div class="container">
         <div class="row" style="padding-top: 140px;">
             <div class="col" style="text-align: center;">
-                <h1 style="color: #c9b9ef;box-shadow: 0px 0px;font-size: 120px;padding-top: 10px;text-shadow: 0px 0px 12px;font-family: Lobster, serif;padding-bottom: 20px;text-align: center;padding-right: 10px;padding-left: 10px;margin-bottom: 25px;">Lodestone</h1>
+                <h1 style="color: #c9b9ef;box-shadow: 0px 0px;font-size: 118.5px;padding-top: 10px;text-shadow: 0px 0px 12px;font-family: Lobster, serif;padding-bottom: 20px;text-align: center;padding-right: 10px;padding-left: 10px;margin-bottom: 25px;">Lodestone</h1>
                 <h1 style="color: #c07bff;box-shadow: 0px 0px;font-size: 30px;text-shadow: 0px 0px 3px;"><strong>Edit</strong>, <strong>Convert </strong>and <strong>Transform </strong>Minecraft Worlds.</h1>
                 <p style="text-align: center;margin-bottom: 35px;font-size: 16px;text-shadow: 0px 0px 2px;">The first open-source all-in-one Minecraft tool, compatible with virtually all platforms, versions and editions. <br>Created by the community, for the community. An all-in-one multi-platform masterpiece.<br><br>Linux | Windows | macOS | Android | Web</p><button class="btn btn-primary" type="button" style="background: #ad95ed;margin-top: 15px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;height: 50px;border-color: #9e86de;color: rgb(13,13,13);">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M3 17C3 16.4477 3.44772 16 4 16H16C16.5523 16 17 16.4477 17 17C17 17.5523 16.5523 18 16 18H4C3.44772 18 3 17.5523 3 17ZM6.29289 9.29289C6.68342 8.90237 7.31658 8.90237 7.70711 9.29289L9 10.5858L9 3C9 2.44772 9.44771 2 10 2C10.5523 2 11 2.44771 11 3L11 10.5858L12.2929 9.29289C12.6834 8.90237 13.3166 8.90237 13.7071 9.29289C14.0976 9.68342 14.0976 10.3166 13.7071 10.7071L10.7071 13.7071C10.5196 13.8946 10.2652 14 10 14C9.73478 14 9.48043 13.8946 9.29289 13.7071L6.29289 10.7071C5.90237 10.3166 5.90237 9.68342 6.29289 9.29289Z" fill="currentColor"></path>
@@ -71,35 +72,58 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card" style="background: rgba(255,255,255,0);border-style: none;"></div>
+            </div>
+        </div>
+    </div>
     <div class="container text-center" style="background: #181922;margin-top: 50px;padding-left: 30px;padding-right: 30px;border-radius: 20px;padding-bottom: 30px;border: 2px solid rgb(66,67,88);margin-bottom: 50px;">
         <div class="intro">
             <h2 class="text-center" style="margin-bottom: 30px;color: #c07bff;margin-top: 20px;font-weight: bold;">Highlights</h2>
         </div>
         <div class="row justify-content-evenly align-items-stretch features">
             <div class="col">
-                <div class="row" data-aos="fade-up" style="box-shadow: 0px 0px rgb(250,36,38);background: rgb(20,21,30);border-radius: 10px;border-width: 10px;padding-right: 10px;padding-left: 10px;">
-                    <div class="col-md-3">
-                        <h3 class="text-start name" style="color: rgb(255,255,255);margin-bottom: 5px;margin-top: 35px;font-size: 32px;"><i class="fa fa-pencil icon" style="color: #ad95ed;font-size: 40px;"></i>&nbsp;NBT Editor</h3>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">The most powerful NBT Editor in any open-source tool. Supporting S-NBT editing and extensions/plug-ins.</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
+                            <div class="card-body" style="background: rgb(20,21,30);border: 1px solid rgb(21,25,33);border-radius: 15px;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;">
+                                <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><i class="typcn typcn-pencil icon" style="color: #ad95ed;font-size: 40px;"></i><br>NBT Editor</h4>
+                                <p class="card-text" style="text-align: left;"><span style="color: rgb(224, 224, 224); background-color: rgb(20, 21, 30);">The most powerful NBT Editor in any open-source tool. Supporting S-NBT editing and extensions/plug-ins.</span><br><br></p><img>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-start name" style="color: rgb(255,255,255);text-align: center;margin-bottom: 5px;margin-top: 35px;font-size: 32px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-boxes icon" style="color: #ad95ed;font-size: 40px;">
-                                <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434L7.752.066ZM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567zM7.5 9.933l-2.75 1.571v3.134l2.75-1.571zm1 3.134 2.75 1.571v-3.134L8.5 9.933zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567zm2.242-2.433V3.504L8.5 5.076V8.21l2.75-1.572ZM7.5 8.21V5.076L4.75 3.504v3.134zM5.258 2.643 8 4.21l2.742-1.567L8 1.076zM15 9.933l-2.75 1.571v3.134L15 13.067zM3.75 14.638v-3.134L1 9.933v3.134z"></path>
-                            </svg>&nbsp;Sculptor</h3>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">Prune, copy, paste, and edit worlds without any external tools. The go-to feature for builders and building teams.</p>
+                    <div class="col-md-6">
+                        <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
+                            <div class="card-body" style="background: rgb(20,21,30);border: 1px solid rgb(21,25,33);border-radius: 15px;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;">
+                                <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><i class="la la-cubes icon" style="color: #ad95ed;font-size: 40px;"></i><br>Sculptor</h4>
+                                <p class="card-text" style="text-align: left;"><span style="color: rgb(224, 224, 224); background-color: rgb(20, 21, 30);">Prune, copy, paste, and edit worlds without any external tools. The go-to feature for builders and building teams.</span><br><br></p><img>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-start name" style="color: rgb(255,255,255);text-align: center;margin-bottom: 5px;margin-top: 35px;font-size: 32px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-repeat icon" style="color: #ad95ed;font-size: 40px;">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
+                    <div class="card-body" style="background: rgb(20,21,30);border: 1px solid rgb(21,25,33);border-radius: 15px;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;">
+                        <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-repeat icon" style="color: #ad95ed;font-size: 40px;">
                                 <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"></path>
                                 <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3M3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9z"></path>
-                            </svg>&nbsp;Converter</h3>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">Convert worlds in seconds with the first open-source world converter that supports all platforms.</p>
+                            </svg><br>Converter</h4>
+                        <p class="card-text" style="text-align: left;"><span style="color: rgb(224, 224, 224); background-color: rgb(20, 21, 30);">Convert worlds in seconds with the first open-source world converter that supports all platforms.</span></p><img>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-start name" style="color: rgb(255,255,255);text-align: center;margin-bottom: 5px;margin-top: 35px;font-size: 32px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-text-right icon" style="color: #ad95ed;font-size: 40px;">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
+                    <div class="card-body" style="background: rgb(20,21,30);border: 1px solid rgb(21,25,33);border-radius: 15px;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;">
+                        <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-text-right icon" style="color: #ad95ed;font-size: 40px;">
                                 <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-4-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5m4-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-4-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"></path>
-                            </svg>&nbsp;GRF Editor</h3>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">Edit Legacy Console GRF/GRH files with our easy-to-use GRF Editor, supporting S-GRF editing as well.</p>
+                            </svg><br>GRF Editor</h4>
+                        <p class="card-text" style="text-align: left;"><span style="color: rgb(224, 224, 224); background-color: rgb(20, 21, 30);">Edit Legacy Console GRF/GRH files with our easy-to-use GRF Editor, supporting S-GRF editing as well.</span></p><img>
                     </div>
                 </div>
             </div>
@@ -121,10 +145,10 @@
                     <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-right: 10px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-laptop" style="width: 55px;height: 55px;color: #ad95ed;">
                             <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"></path>
                         </svg></div>
-                    <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-right: 10px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-xbox" style="width: 54.5px;height: 55px;color: #ad95ed;">
+                    <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-right: 10px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-xbox" style="width: 54.4px;height: 54.4px;color: #ad95ed;">
                             <path d="M7.202 15.967a7.987 7.987 0 0 1-3.552-1.26c-.898-.585-1.101-.826-1.101-1.306 0-.965 1.062-2.656 2.879-4.583C6.459 7.723 7.897 6.44 8.052 6.475c.302.068 2.718 2.423 3.622 3.531 1.43 1.753 2.088 3.189 1.754 3.829-.254.486-1.83 1.437-2.987 1.802-.954.301-2.207.429-3.239.33Zm-5.866-3.57C.589 11.253.212 10.127.03 8.497c-.06-.539-.038-.846.137-1.95.218-1.377 1.002-2.97 1.945-3.95.401-.417.437-.427.926-.263.595.2 1.23.638 2.213 1.528l.574.519-.313.385C4.056 6.553 2.52 9.086 1.94 10.653c-.315.852-.442 1.707-.306 2.063.091.24.007.15-.3-.319Zm13.101.195c.074-.36-.019-1.02-.238-1.687-.473-1.443-2.055-4.128-3.508-5.953l-.457-.575.494-.454c.646-.593 1.095-.948 1.58-1.25.381-.237.927-.448 1.161-.448.145 0 .654.528 1.065 1.104a8.372 8.372 0 0 1 1.343 3.102c.153.728.166 2.286.024 3.012a9.495 9.495 0 0 1-.6 1.893c-.179.393-.624 1.156-.82 1.404-.1.128-.1.127-.043-.148ZM7.335 1.952c-.67-.34-1.704-.705-2.276-.803a4.171 4.171 0 0 0-.759-.043c-.471.024-.45 0 .306-.358A7.778 7.778 0 0 1 6.47.128c.8-.169 2.306-.17 3.094-.005.85.18 1.853.552 2.418.9l.168.103-.385-.02c-.766-.038-1.88.27-3.078.853-.361.176-.676.316-.699.312a12.246 12.246 0 0 1-.654-.319Z"></path>
                         </svg></div>
-                    <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-right: 10px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-playstation" style="width: 62.8px;height: 62.8px;color: #ad95ed;">
+                    <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-right: 10px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-playstation" style="width: 62.9px;height: 62.9px;color: #ad95ed;">
                             <path d="M15.858 11.451c-.313.395-1.079.676-1.079.676l-5.696 2.046v-1.509l4.192-1.493c.476-.17.549-.412.162-.538-.386-.127-1.085-.09-1.56.08l-2.794.984v-1.566l.161-.054s.807-.286 1.942-.412c1.135-.125 2.525.017 3.616.43 1.23.39 1.368.962 1.056 1.356ZM9.625 8.883v-3.86c0-.453-.083-.87-.508-.988-.326-.105-.528.198-.528.65v9.664l-2.606-.827V2c1.108.206 2.722.692 3.59.985 2.207.757 2.955 1.7 2.955 3.825 0 2.071-1.278 2.856-2.903 2.072Zm-8.424 3.625C-.061 12.15-.271 11.41.304 10.984c.532-.394 1.436-.69 1.436-.69l3.737-1.33v1.515l-2.69.963c-.474.17-.547.411-.161.538.386.126 1.085.09 1.56-.08l1.29-.469v1.356l-.257.043a8.454 8.454 0 0 1-4.018-.323Z"></path>
                         </svg></div>
                     <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 80px;height: 80px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-nintendo-switch" style="width: 55px;height: 55px;color: #ad95ed;">
@@ -139,7 +163,7 @@
                 <div class="card" style="border-style: none;">
                     <div class="card-body" style="background: #121319;color: rgb(255,255,255);">
                         <h4 class="card-title" style="text-align: center;color: #ad95ed;">Java</h4>
-                        <p class="card-text" style="text-align: left;">1.3.0 - 1.20<br><br><strong>Platforms:</strong><br>• Windows<br>• macOS<br>• Linux<br>• Android (via PoJav)</p>
+                        <p class="card-text" style="text-align: left;">1.3.0 - 1.21<br><br><strong>Platforms:</strong><br>• Windows<br>• macOS<br>• Linux<br>• Android (via PoJav)</p>
                     </div>
                 </div>
             </div>
