--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="col" style="text-align: center;">
                 <h1 style="color: #c9b9ef;box-shadow: 0px 0px;font-size: 118.5px;padding-top: 10px;text-shadow: 0px 0px 12px;font-family: Lobster, serif;padding-bottom: 20px;text-align: center;padding-right: 10px;padding-left: 10px;margin-bottom: 25px;">Lodestone</h1>
                 <h1 style="color: #c07bff;box-shadow: 0px 0px;font-size: 30px;text-shadow: 0px 0px 3px;"><strong>Edit</strong>, <strong>Convert </strong>and <strong>Transform </strong>Minecraft Worlds.</h1>
-                <p style="text-align: center;margin-bottom: 5px;font-size: 16px;text-shadow: 0px 0px 2px;">The first open-source all-in-one Minecraft tool, compatible with virtually all platforms, versions and editions. <br>Created by the community, for the community. An all-in-one multi-platform masterpiece.</p>
+                <p style="text-align: center;margin-bottom: 5px;font-size: 16px;text-shadow: 0px 0px 2px;color: white;">The first open-source all-in-one Minecraft tool, compatible with virtually all platforms, versions and editions. <br>Created by the community, for the community. An all-in-one multi-platform masterpiece.</p>
                 <div class="row pulse animated" style="box-shadow: 0px 0px rgb(250,36,38);border-radius: 20px;background: Transparent;padding-top: 15px;padding-bottom: 15px;padding-right: 15px;padding-left: 15px;border-width: 2px;border-style: none;margin-bottom: 20px;">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center">
                         <div class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 60px;height: 60px;margin-right: 6px;margin-top: 10px;background: #232430;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-microsoft icon" style="color: #ad95ed;font-size: 40px;width: 40px;height: 40px;">
@@ -166,19 +166,19 @@
         <div class="row" data-aos="fade-up" style="box-shadow: 0px 0px rgb(250,36,38);border: 2px solid rgb(66,67,88);border-radius: 20px;background: #232430;padding-top: 15px;padding-bottom: 15px;margin-top: 50px;padding-right: 15px;padding-left: 15px;margin-bottom: 50px;">
             <div class="col-md-3">
                 <h3 class="name" style="color: #c07bff;text-align: center;margin-bottom: 10px;margin-top: 35px;font-size: 32px;font-weight: bold;">Ready For 1.21</h3>
-                <p class="description" style="margin-bottom: 30px;text-align: center;">Includes support for the latest version of Minecraft.</p>
+                <p class="description" style="margin-bottom: 30px;text-align: center;color: white;">Includes support for the latest version of Minecraft.</p>
             </div>
             <div class="col-md-3">
                 <h3 class="name" style="color: #c07bff;text-align: center;margin-bottom: 10px;margin-top: 35px;font-size: 32px;font-weight: bold;">Always Growing</h3>
-                <p class="description" style="margin-bottom: 30px;text-align: center;">Getting better every single day, with the help of the community</p>
+                <p class="description" style="margin-bottom: 30px;text-align: center;color: white;">Getting better every single day, with the help of the community</p>
             </div>
             <div class="col-md-3">
                 <h3 class="name" style="color: #c07bff;text-align: center;margin-bottom: 10px;margin-top: 35px;font-size: 32px;font-weight: bold;">Free For Everyone</h3>
-                <p class="description" style="margin-bottom: 30px;text-align: center;">Fully free to use. No secrets, no tricks.&nbsp;</p>
+                <p class="description" style="margin-bottom: 30px;text-align: center;color: white;">Fully free to use. No secrets, no tricks.&nbsp;</p>
             </div>
             <div class="col-md-3">
                 <h3 class="name" style="color: #c07bff;text-align: center;margin-bottom: 10px;margin-top: 35px;font-size: 32px;font-weight: bold;">Easy To Use</h3>
-                <p class="description" style="margin-bottom: 30px;text-align: center;">Simple for everyone to use, including those with visual impairments.</p>
+                <p class="description" style="margin-bottom: 30px;text-align: center;color: white;">Simple for everyone to use, including those with visual impairments.</p>
             </div>
         </div>
     </div>
@@ -200,7 +200,7 @@
                         <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
                             <div class="card-body" style="background: Transparent;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;border-style: none;">
                                 <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><img src="assets/img/TOOL_ICONS/NBT_Editor.svg" style="width: 50px;height: 50px;margin-bottom: 10px;"><br>NBT Editor</h4>
-                                <p class="description" style="margin-bottom: 30px;text-align: left;">The most powerful NBT Editor in any open-source tool. Supporting S-NBT editing and extensions/plug-ins.</p><img>
+                                <p class="description" style="margin-bottom: 30px;text-align: left;color: white;">The most powerful NBT Editor in any open-source tool. Supporting S-NBT editing and extensions/plug-ins.</p><img>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
                             <div class="card-body" style="background: Transparent;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;border-style: none;">
                                 <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><img src="assets/img/TOOL_ICONS/Sculptor.svg" style="width: 50px;height: 50px;margin-bottom: 10px;"><br>Sculptor</h4>
-                                <p class="description" style="margin-bottom: 30px;text-align: left;">Prune, copy, paste, and edit worlds without any external tools. The go-to feature for builders and building teams.</p><img>
+                                <p class="description" style="margin-bottom: 30px;text-align: left;color: white;">Prune, copy, paste, and edit worlds without any external tools. The go-to feature for builders and building teams.</p><img>
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                 <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
                     <div class="card-body" style="background: Transparent;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;border-style: none;">
                         <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><img src="assets/img/TOOL_ICONS/World_Converter.svg" style="width: 50px;height: 50px;margin-bottom: 10px;"><br>Converter</h4>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">Convert worlds in seconds with the first open-source world converter that supports all platforms.</p><img>
+                        <p class="description" style="margin-bottom: 30px;text-align: left;color: white;">Convert worlds in seconds with the first open-source world converter that supports all platforms.</p><img>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                 <div class="card" style="background: rgba(255,255,255,0);border-style: none;">
                     <div class="card-body" style="background: Transparent;color: var(--bs-body-bg);margin-bottom: 50px;padding-top: 15px;padding-right: 15px;padding-bottom: 15px;padding-left: 15px;border-style: none;">
                         <h4 class="card-title" style="color: #c07bff;text-align: center;font-size: 32px;"><img src="assets/img/TOOL_ICONS/GRF_Editor.svg" style="width: 50px;height: 50px;margin-bottom: 10px;"><br>GRF Editor</h4>
-                        <p class="description" style="margin-bottom: 30px;text-align: left;">Edit Legacy Console GRF/GRH files with our easy-to-use GRF Editor, supporting S-GRF editing as well.</p><img>
+                        <p class="description" style="margin-bottom: 30px;text-align: left;color: white;">Edit Legacy Console GRF/GRH files with our easy-to-use GRF Editor, supporting S-GRF editing as well.</p><img>
                     </div>
                 </div>
             </div>
@@ -258,7 +258,7 @@
                 <div class="card" style="border-style: none;">
                     <div class="card-body" style="background: #232430;color: rgb(255,255,255);">
                         <h4 class="card-title" style="text-align: center;color: #ad95ed;">Java</h4>
-                        <p class="card-text" style="text-align: left;"><strong>Platforms:</strong><br>• Windows<br>• macOS<br>• Linux<br>• Android (via PoJav)<br><br>1.3.0 - 1.21</p>
+                        <p class="card-text" style="text-align: left;color: white;"><strong>Platforms:</strong><br>• Windows<br>• macOS<br>• Linux<br>• Android (via PoJav)<br><br>1.3.0 - 1.21</p>
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                 <div class="card" style="border-style: none;">
                     <div class="card-body" style="background: #232430;color: rgb(255,255,255);">
                         <h4 class="card-title" style="text-align: center;color: #ad95ed;">Bedrock</h4>
-                        <p class="card-text" style="text-align: left;"><strong>Platforms:</strong><br>• Windows / macOS / Linux<br>• Android<br>• iOS / iPadOS<br><br><strong>With Realms Transfer</strong><br>• Xbox One / Series X &amp; S<br>• PlayStation®4 / 5<br>• Nintendo Switch<br><br>&nbsp;1.0.0 - 1.20</p>
+                        <p class="card-text" style="text-align: left;color: white;"><strong>Platforms:</strong><br>• Windows / macOS / Linux<br>• Android<br>• iOS / iPadOS<br><br><strong>With Realms Transfer</strong><br>• Xbox One / Series X &amp; S<br>• PlayStation®4 / 5<br>• Nintendo Switch<br><br>&nbsp;1.0.0 - 1.20</p>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                 <div class="card" style="border-style: none;">
                     <div class="card-body" style="background: #232430;color: rgb(255,255,255);">
                         <h4 class="card-title" style="text-align: center;color: #ad95ed;">Console</h4>
-                        <p class="card-text" style="text-align: left;">Xbox:<br>• Xbox 360 | TU0 - TU75<br>• Xbox One | CU0 - CU58<br><br>PlayStation:<br>• PlayStation®3 | 1.00 - 1.84 <br>• PlayStation®Vita&nbsp;| 1.00 - 1.84<br>• PlayStation®4 | 1.00 - 1.95<br><br>Nintendo:<br>• Nintendo Switch | 1.0.0 - 1.0.17<br>• Nintendo Wii U | Patch 1 - Patch 43</p>
+                        <p class="card-text" style="text-align: left;color: white;">Xbox:<br>• Xbox 360 | TU0 - TU75<br>• Xbox One | CU0 - CU58<br><br>PlayStation:<br>• PlayStation®3 | 1.00 - 1.84 <br>• PlayStation®Vita&nbsp;| 1.00 - 1.84<br>• PlayStation®4 | 1.00 - 1.95<br><br>Nintendo:<br>• Nintendo Switch | 1.0.0 - 1.0.17<br>• Nintendo Wii U | Patch 1 - Patch 43</p>
                     </div>
                 </div>
             </div>
