Several small changes and fixes
Made several small changes and fixes.

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         })();
     </script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Lato.css">
-    <link rel="stylesheet" href="assets/css/Lobster.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Motiva%20Sans%20Test.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/aos.min.css">
@@ -124,7 +124,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html" style="font-size: 18px;color: #ad95ed;" target="_top">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Guides</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://github.com/team-lodestone/documentation" style="color: rgb(235,235,235);font-size: 18px;">Documentation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/download" style="color: rgb(235,235,235);font-size: 18px;">Download</a></li>
+                    <li class="nav-item"><a class="nav-link" href="download/index.html" style="color: rgb(235,235,235);font-size: 18px;">Download</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: rgb(235,235,235);font-size: 18px;">Features</a>
                         <div class="dropdown-menu dropdown-menu-dark" style="background: #181922;"><a class="dropdown-item" href="#" style="background: #181922;"><img src="assets/img/TOOL_ICONS/NBT_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">NBT Editor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="assets/img/TOOL_ICONS/Sculptor.svg" style="width: 26px;height: 26px;margin-right: 5px;">Sculptor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="assets/img/TOOL_ICONS/World_Converter.svg" style="width: 26px;height: 26px;margin-right: 5px;">Converter</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="assets/img/TOOL_ICONS/GRF_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">GRF Editor</a></div>
                     </li>
@@ -155,7 +155,7 @@
                                 <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5zM4.09 4a9.267 9.267 0 0 1 .64-1.539 6.7 6.7 0 0 1 .597-.933A7.025 7.025 0 0 0 2.255 4zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a6.958 6.958 0 0 0-.656 2.5zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5zM5.145 12c.138.386.295.744.468 1.068.552 1.035 1.218 1.65 1.887 1.855V12zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472M3.82 11a13.652 13.652 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933M8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855.173-.324.33-.682.468-1.068zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5a6.959 6.959 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4a7.966 7.966 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4z"></path>
                             </svg></div>
                     </div>
-                </div><a class="btn btn-primary" role="button" style="background: #ad95ed;margin-top: 15px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;height: 50px;border-color: #9e86de;color: rgb(13,13,13);" href="download/index.html">&nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
+                </div><a class="btn btn-primary" role="button" style="background: #ad95ed;margin-top: 15px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;height: 50px;border-color: #9e86de;color: rgb(13,13,13);" href="download/index.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M3 17C3 16.4477 3.44772 16 4 16H16C16.5523 16 17 16.4477 17 17C17 17.5523 16.5523 18 16 18H4C3.44772 18 3 17.5523 3 17ZM6.29289 9.29289C6.68342 8.90237 7.31658 8.90237 7.70711 9.29289L9 10.5858L9 3C9 2.44772 9.44771 2 10 2C10.5523 2 11 2.44771 11 3L11 10.5858L12.2929 9.29289C12.6834 8.90237 13.3166 8.90237 13.7071 9.29289C14.0976 9.68342 14.0976 10.3166 13.7071 10.7071L10.7071 13.7071C10.5196 13.8946 10.2652 14 10 14C9.73478 14 9.48043 13.8946 9.29289 13.7071L6.29289 10.7071C5.90237 10.3166 5.90237 9.68342 6.29289 9.29289Z" fill="currentColor"></path>
                     </svg>&nbsp;<strong>STILL IN DEVELOPMENT</strong></a>
             </div>
@@ -349,10 +349,10 @@
                     <div class="col-sm-6 col-md-3 item" style="width: 220px;">
                         <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">PAGES</h3>
                         <ul>
-                            <li style="text-align: left;"><a href="#">Home</a></li>
+                            <li style="text-align: left;"><a href="index.html">Home</a></li>
                             <li style="text-align: left;"><a href="#">Guides</a></li>
                             <li style="text-align: left;"><a href="#">Documentation</a></li>
-                            <li style="text-align: left;"><a href="#">Download</a></li>
+                            <li style="text-align: left;"><a href="download/index.html">Download</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item" style="width: 220px;">
@@ -364,11 +364,11 @@
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item" style="width: 220px;">
-                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">N/A</h3>
+                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">MISC.</h3>
                         <ul>
                             <li style="text-align: left;"><a href="#"><span style="color: inherit;">Open-Source Licensing</span></a></li>
-                            <li style="text-align: left;"><a href="#">Coming Soon<br></a></li>
-                            <li style="text-align: left;"><a href="#">Coming Soon</a></li>
+                            <li style="text-align: left;"><a href="https://discord.gg/8K3eVGVbKG">Discord Community</a></li>
+                            <li style="text-align: left;"><a href="https://github.com/Team-Lodestone/Documentation/blob/main/Team.md">Team / Credits</a></li>
                         </ul>
                     </div>
                     <div class="col-auto col-md-6 item text">
