--- a/download/index.html
+++ b/download/index.html
@@ -90,8 +90,8 @@
         })();
     </script>
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/Lato.css">
-    <link rel="stylesheet" href="../assets/css/Lobster.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Motiva%20Sans%20Test.css">
     <link rel="stylesheet" href="../assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="../assets/css/Features-Clean.css">
@@ -105,29 +105,66 @@
         <div class="col" style="text-align: center;border-style: none;">
             <h1 style="color: #c07bff;box-shadow: 0px 0px;font-size: 30px;text-shadow: 0px 0px 3px;"><strong>Downloads</strong></h1><a class="btn btn-primary" role="button" style="background: #ad95ed;margin-top: 15px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;border-color: #9e86de;color: rgb(13,13,13);" href="../index.html">Nothing here yet! Return to home?</a>
         </div>
-        <div class="col">
-            <nav class="navbar navbar-expand-lg fixed-top navigation-clean navbar-light" style="background: #1b1b21;color: rgb(224,224,224);">
-                <div class="container"><a class="navbar-brand" href="#"><img src="../assets/img/LOGO/Lodestone_Logo.svg" style="height: 25px;width: 25px;margin-right: 2px;">Project Lodestone</a><button data-bs-toggle="collapse" class="navbar-toggler justify-content-sm-center align-items-sm-center" data-bs-target="#navcol-1" style="border-style: none;width: 40px;height: 40px;background: #232430;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;padding-left: 0px;"><span class="visually-hidden">Toggle navigation</span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="font-size: 35px;color: #ad95ed;">
-                            <path d="M4 6C4 5.44772 4.44772 5 5 5H19C19.5523 5 20 5.44772 20 6C20 6.55228 19.5523 7 19 7H5C4.44772 7 4 6.55228 4 6Z" fill="currentColor"></path>
-                            <path d="M4 18C4 17.4477 4.44772 17 5 17H19C19.5523 17 20 17.4477 20 18C20 18.5523 19.5523 19 19 19H5C4.44772 19 4 18.5523 4 18Z" fill="currentColor"></path>
-                            <path d="M11 11C10.4477 11 10 11.4477 10 12C10 12.5523 10.4477 13 11 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H11Z" fill="currentColor"></path>
-                        </svg><code style="color: rgb(224,224,224);"></code></button>
-                    <div class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="navbar-nav navbar-nav-scroll ms-auto">
-                            <li class="nav-item"></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html" style="font-size: 18px;color: #ad95ed;" target="_top">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Guides</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Documentation</a></li>
-                            <li class="nav-item"><a class="nav-link" href="PAGES/Download.html" style="color: rgb(235,235,235);font-size: 18px;">Download<br></a></li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: rgb(235,235,235);font-size: 18px;">Features</a>
-                                <div class="dropdown-menu dropdown-menu-dark" style="background: #181922;"><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/NBT_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">NBT Editor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/Sculptor.svg" style="width: 26px;height: 26px;margin-right: 5px;">Sculptor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/World_Converter.svg" style="width: 26px;height: 26px;margin-right: 5px;">Converter</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/GRF_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">GRF Editor</a></div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
     </div>
+    <div class="col">
+        <nav class="navbar navbar-expand-lg fixed-top navigation-clean navbar-light" style="background: #1b1b21;color: rgb(224,224,224);">
+            <div class="container"><a class="navbar-brand" href="#"><img src="../assets/img/LOGO/Lodestone_Logo.svg" style="height: 25px;width: 25px;margin-right: 2px;">Project Lodestone</a><button data-bs-toggle="collapse" class="navbar-toggler justify-content-sm-center align-items-sm-center" data-bs-target="#navcol-1" style="border-style: none;width: 40px;height: 40px;background: #232430;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;padding-left: 0px;"><span class="visually-hidden">Toggle navigation</span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="font-size: 35px;color: #ad95ed;">
+                        <path d="M4 6C4 5.44772 4.44772 5 5 5H19C19.5523 5 20 5.44772 20 6C20 6.55228 19.5523 7 19 7H5C4.44772 7 4 6.55228 4 6Z" fill="currentColor"></path>
+                        <path d="M4 18C4 17.4477 4.44772 17 5 17H19C19.5523 17 20 17.4477 20 18C20 18.5523 19.5523 19 19 19H5C4.44772 19 4 18.5523 4 18Z" fill="currentColor"></path>
+                        <path d="M11 11C10.4477 11 10 11.4477 10 12C10 12.5523 10.4477 13 11 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H11Z" fill="currentColor"></path>
+                    </svg><code style="color: rgb(224,224,224);"></code></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                    <ul class="navbar-nav navbar-nav-scroll ms-auto">
+                        <li class="nav-item"></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html" style="font-size: 18px;color: rgb(235,235,235);" target="_top">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Guides</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(235,235,235);font-size: 18px;">Documentation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html" style="color: #ad95ed;font-size: 18px;">Download<br></a></li>
+                        <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: rgb(235,235,235);font-size: 18px;">Features</a>
+                            <div class="dropdown-menu dropdown-menu-dark" style="background: #181922;"><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/NBT_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">NBT Editor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/Sculptor.svg" style="width: 26px;height: 26px;margin-right: 5px;">Sculptor</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/World_Converter.svg" style="width: 26px;height: 26px;margin-right: 5px;">Converter</a><a class="dropdown-item" href="#" style="background: #181922;"><img src="../assets/img/TOOL_ICONS/GRF_Editor.svg" style="width: 26px;height: 26px;margin-right: 5px;">GRF Editor</a></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <footer class="footer-dark" style="background: #1b1b21;margin-top: 500px;">
+        <div class="container">
+            <div class="row justify-content-between align-items-stretch">
+                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
+                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">PAGES</h3>
+                    <ul>
+                        <li style="text-align: left;"><a href="../index.html">Home</a></li>
+                        <li style="text-align: left;"><a href="#">Guides</a></li>
+                        <li style="text-align: left;"><a href="#">Documentation</a></li>
+                        <li style="text-align: left;"><a href="../download/index.html">Download</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
+                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">FEATURES</h3>
+                    <ul>
+                        <li style="text-align: left;"><a href="#">NBT Editor</a></li>
+                        <li style="text-align: left;"><a href="#">World Converter</a></li>
+                        <li style="text-align: left;"><a href="#"><span style="color: rgb(203, 218, 230); background-color: rgb(10, 14, 18);">Sculptor</span></a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
+                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">MISC.</h3>
+                    <ul>
+                        <li style="text-align: left;"><a href="#"><span style="color: inherit;">Open-Source Licensing</span></a></li>
+                        <li style="text-align: left;"><a href="https://discord.gg/8K3eVGVbKG">Discord Community</a></li>
+                        <li style="text-align: left;"><a href="https://github.com/Team-Lodestone/Documentation/blob/main/Team.md">Team / Credits</a></li>
+                    </ul>
+                </div>
+                <div class="col-auto col-md-6 item text">
+                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">ABOUT US</h3>
+                    <p class="lead" style="text-align: left;color: rgb(217,217,217);">Lodestone is an open-source Minecraft project focused on bringing powerful tools and resources to everyone for free!&nbsp;</p>
+                </div>
+            </div>
+        </div>
+        <p class="text-center" style="text-align: right;color: rgba(217,217,217,0.24);padding-top: 25px;"><strong>## 4J Studios / Mojang Studios / Microsoft / Sony / Nintendo ##</strong><br>PROJECT LODESTONE IS NOT AN OFFICIAL MINECRAFT PRODUCT.</p>
+        <p class="copyright" style="color: rgb(217,217,217);">Project Lodestone © 2024</p>
+    </footer>
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
