--- a/download/index.html
+++ b/download/index.html
@@ -128,44 +128,46 @@
                 </div>
             </div>
         </nav>
-    </div>
-    <footer class="footer-dark" style="background: #1b1b21;margin-top: 500px;">
-        <div class="container">
-            <div class="row justify-content-between align-items-stretch">
-                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
-                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">PAGES</h3>
-                    <ul>
-                        <li style="text-align: left;"><a href="../index.html">Home</a></li>
-                        <li style="text-align: left;"><a href="#">Guides</a></li>
-                        <li style="text-align: left;"><a href="#">Documentation</a></li>
-                        <li style="text-align: left;"><a href="../download/index.html">Download</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
-                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">FEATURES</h3>
-                    <ul>
-                        <li style="text-align: left;"><a href="#">NBT Editor</a></li>
-                        <li style="text-align: left;"><a href="#">World Converter</a></li>
-                        <li style="text-align: left;"><a href="#"><span style="color: rgb(203, 218, 230); background-color: rgb(10, 14, 18);">Sculptor</span></a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item" style="width: 220px;">
-                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">MISC.</h3>
-                    <ul>
-                        <li style="text-align: left;"><a href="#"><span style="color: inherit;">Open-Source Licensing</span></a></li>
-                        <li style="text-align: left;"><a href="https://discord.gg/8K3eVGVbKG">Discord Community</a></li>
-                        <li style="text-align: left;"><a href="https://github.com/Team-Lodestone/Documentation/blob/main/Team.md">Team / Credits</a></li>
-                    </ul>
-                </div>
-                <div class="col-auto col-md-6 item text">
-                    <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">ABOUT US</h3>
-                    <p class="lead" style="text-align: left;color: rgb(217,217,217);">Lodestone is an open-source Minecraft project focused on bringing powerful tools and resources to everyone for free!&nbsp;</p>
+        <footer class="text-bg-secondary footer-dark" style="margin-top: 900px;">
+            <div class="container">
+                <div class="row justify-content-between align-items-stretch">
+                    <div class="col-sm-6 col-md-3 text-body item" style="width: 220px;">
+                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">PAGES</h3>
+                        <ul>
+                            <li style="text-align: left;"><a href="../index.html">Home</a></li>
+                            <li style="text-align: left;"><a href="#">Guides</a></li>
+                            <li style="text-align: left;"><a href="#">Documentation</a></li>
+                            <li style="text-align: left;"><a href="../download/index.html">Download</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 text-body item" style="width: 220px;">
+                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">FEATURES</h3>
+                        <ul>
+                            <li style="text-align: left;"><a href="#">NBT Editor</a></li>
+                            <li style="text-align: left;"><a href="#">Sculptor</a></li>
+                            <li style="text-align: left;"><a href="#">Converter</a></li>
+                            <li style="text-align: left;"><a href="#">GRF Editor</a></li>
+                            <li style="text-align: left;"><a href="#"><span style="color: rgb(203, 218, 230); background-color: rgb(10, 14, 18);">Sculptor</span></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 text-body item" style="width: 220px;">
+                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">MISC.</h3>
+                        <ul>
+                            <li style="text-align: left;"><a href="#"><span style="color: inherit;">Open-Source Licensing</span></a></li>
+                            <li style="text-align: left;"><a href="https://discord.gg/8K3eVGVbKG">Discord Community</a></li>
+                            <li style="text-align: left;"><a href="https://github.com/Team-Lodestone/Documentation/blob/main/Team.md">Team / Credits</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-auto col-md-6 text-body item text">
+                        <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">ABOUT US</h3>
+                        <p class="lead text-secondary-emphasis" style="text-align: left;">Lodestone is an open-source Minecraft project focused on bringing powerful tools and resources to everyone for free!&nbsp;</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <p class="text-center" style="text-align: right;color: rgba(217,217,217,0.24);padding-top: 25px;"><strong>## 4J Studios / Mojang Studios / Microsoft / Sony / Nintendo ##</strong><br>PROJECT LODESTONE IS NOT AN OFFICIAL MINECRAFT PRODUCT.</p>
-        <p class="copyright" style="color: rgb(217,217,217);">Project Lodestone © 2024</p>
-    </footer>
+            <p class="text-center text-secondary-emphasis" style="text-align: right;color: rgba(217,217,217,0.24);padding-top: 25px;"><strong>## 4J Studios / Mojang Studios / Microsoft / Sony / Nintendo ##</strong><br>PROJECT LODESTONE IS NOT AN OFFICIAL MINECRAFT PRODUCT.</p>
+            <p class="text-secondary-emphasis copyright" style="color: rgb(217,217,217);">Project Lodestone © 2024</p>
+        </footer>
+    </div>
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
