--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="progress pulse animated" style="height: 32px;">
                     <div class="progress-bar bg-primary" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100" style="width: 18%;">18%</div>
-                </div><a class="btn btn-primary link-body-emphasis" role="button" style="margin-top: 25px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;height: 50px;border-color: #9e86de;" href="https://discord.gg/8K3eVGVbKG"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="font-size: 24px;">
+                </div><a class="btn btn-primary link-body-emphasis" role="button" style="margin-top: 25px;box-shadow: 0px 0px 15px #9e86de;margin-bottom: 15px;font-size: 18px;height: 50px;border-color: #9e86de;" href="https://discord.gg/umHRdX6R7V"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="font-size: 24px;">
                         <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"></path>
                     </svg>&nbsp;<strong>View Our Progress</strong></a>
             </div>
@@ -184,11 +184,12 @@
                 <p class="text-body description" style="margin-bottom: 30px;text-align: center;">Simple for everyone to use, including those with visual impairments.</p>
             </div>
         </div>
-        <h2 class="text-center" style="margin-bottom: 30px;color: #c07bff;margin-top: 25px;font-weight: bold;">One Solution for Everything</h2>
+        <h2 class="text-center" data-aos="fade-up" style="margin-bottom: 30px;color: #c07bff;margin-top: 25px;font-weight: bold;">One Solution for Everything</h2>
         <div class="row" data-aos="fade-up" style="box-shadow: 0px 0px rgb(250,36,38);padding-bottom: 15px;padding-right: 15px;padding-left: 15px;background: Transparent;margin: -2px;">
             <div class="col-md-3">
-                <div class="card" style="border-style: none;">
-                    <div class="card-body d-xxl-flex justify-content-xxl-center" style="border-style: none;">
+                <div class="card" style="border-style: none;"></div>
+                <div class="row">
+                    <div class="col d-xxl-flex justify-content-xxl-center">
                         <div class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 70px;height: 70px;"><img class="justify-content-center align-items-center align-content-center align-self-center" src="assets/img/TOOL_ICONS/NBT_Editor.svg" style="width: 50px;height: 50px;"></div>
                     </div>
                 </div>
@@ -196,8 +197,9 @@
                 <p class="text-center text-body description" style="margin-bottom: 30px;text-align: left;">The most powerful NBT Editor in any open-source tool. Supporting S-NBT editing and extensions/plug-ins.</p>
             </div>
             <div class="col-md-3">
-                <div class="card" style="border-style: none;">
-                    <div class="card-body d-xxl-flex justify-content-xxl-center" style="border-style: none;">
+                <div class="card" style="border-style: none;"></div>
+                <div class="row">
+                    <div class="col d-xxl-flex justify-content-xxl-center">
                         <div class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 70px;height: 70px;"><img class="justify-content-center align-items-center align-content-center align-self-center" src="assets/img/TOOL_ICONS/Sculptor.svg" style="width: 50px;height: 50px;"></div>
                     </div>
                 </div>
@@ -205,8 +207,9 @@
                 <p class="text-center text-body description" style="margin-bottom: 30px;text-align: left;">Prune, copy, paste, and edit worlds without any external tools. The go-to feature for builders and building teams.</p>
             </div>
             <div class="col-md-3">
-                <div class="card" style="border-style: none;">
-                    <div class="card-body d-xxl-flex justify-content-xxl-center" style="border-style: none;">
+                <div class="card" style="border-style: none;"></div>
+                <div class="row">
+                    <div class="col d-xxl-flex justify-content-xxl-center">
                         <div class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 70px;height: 70px;"><img class="justify-content-center align-items-center align-content-center align-self-center" src="assets/img/TOOL_ICONS/World_Converter.svg" style="width: 50px;height: 50px;"></div>
                     </div>
                 </div>
@@ -214,8 +217,9 @@
                 <p class="text-center text-body description" style="margin-bottom: 30px;text-align: left;">Convert worlds in seconds with the first open-source world converter that supports all platforms.</p>
             </div>
             <div class="col-md-3">
-                <div class="card" style="border-style: none;">
-                    <div class="card-body d-xxl-flex justify-content-xxl-center" style="border-style: none;">
+                <div class="card" style="border-style: none;"></div>
+                <div class="row">
+                    <div class="col d-xxl-flex justify-content-xxl-center">
                         <div class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon" style="width: 70px;height: 70px;"><img class="justify-content-center align-items-center align-content-center align-self-center" src="assets/img/TOOL_ICONS/GRF_Editor.svg" style="width: 50px;height: 50px;"></div>
                     </div>
                 </div>
@@ -232,7 +236,7 @@
         </div>
     </div>
     <div class="container text-center" data-aos="fade-up" style="/*background: #1f1f26;*/padding-left: 30px;padding-right: 30px;border-style: none;padding-bottom: 5px;">
-        <div class="intro"></div><button class="btn btn-primary link-body-emphasis" type="button" style="margin-top: 5px;box-shadow: 0px 0px 11px #ad95ed;border-style: none;">Explore All Features&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right icon" style="color: rgb(13,13,13);">
+        <div class="intro"></div><button class="btn btn-primary link-body-emphasis" type="button" style="margin-top: 5px;box-shadow: 0px 0px 11px #ad95ed;border-style: none;">Explore All Features&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right icon">
                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
             </svg></button>
     </div>
@@ -281,7 +285,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid text-bg-secondary" data-aos="fade-up" id="whyChooseLodestone" style="/*padding-left: 80px;*//*padding-right: 80px;*/border-radius: 20px;padding-bottom: 20px;margin-bottom: 50px;margin-top: 50px;/*display: flex;*//*flex-direction: column;*//*justify-content: center;*//*align-items: center;*/@media screen and (max-width: 575.98px) { width: 80%;border: 1px solid rgb(127,127,127);">
+    <div class="container-fluid" data-aos="fade-up" id="whyChooseLodestone" style="/*padding-left: 80px;*//*padding-right: 80px;*/border-radius: 20px;padding-bottom: 20px;margin-bottom: 50px;margin-top: 50px;/*display: flex;*//*flex-direction: column;*//*justify-content: center;*//*align-items: center;*/@media screen and (max-width: 575.98px) { width: 80%;border: 1px solid rgb(127,127,127);">
         <div class="intro">
             <h2 class="text-center" style="margin-bottom: 30px;color: #c07bff;margin-top: 20px;padding-top: 15px;">Why Choose Lodestone</h2>
         </div>
@@ -365,7 +369,9 @@
                         <h3 style="text-align: left;font-size: 20px;padding-top: 25px;">FEATURES</h3>
                         <ul>
                             <li style="text-align: left;"><a href="#">NBT Editor</a></li>
-                            <li style="text-align: left;"><a href="#">World Converter</a></li>
+                            <li style="text-align: left;"><a href="#">Sculptor</a></li>
+                            <li style="text-align: left;"><a href="#">Converter</a></li>
+                            <li style="text-align: left;"><a href="#">GRF Editor</a></li>
                             <li style="text-align: left;"><a href="#"><span style="color: rgb(203, 218, 230); background-color: rgb(10, 14, 18);">Sculptor</span></a></li>
                         </ul>
                     </div>
