--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Team-Lodestone.github.io</title>
-    <link rel="stylesheet" href="assets/main.css" type="text/css">
-</head>
-
-<body>
-  <!-- raw html unless offroaders wants to switch -->
-  <div id="topbar">
-    <div class="right">
-      <img src="assets/Project_Lodestone_Logo_Made_By_NikStudios.svg" class="logo" onclick="window.location = '/'">
-    </div>
-    <div class="left">
-      <div class="vr"></div>
-      <h1 class="topbarButton">Download</h1>
-      <h1 class="topbarButton">Documentation</h1>
-      <div class="vr"></div>
-    </div>
-  </div>
-  <div id="mainPage">
-    <h1>test</h1>
-    <h3 class="alt">less important</h3>
-  </div>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
