--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <meta name="keywords" content="minecraft, lodestone, world converter, converter, legacy console edition, lce, java edition, java, documentation, bedrock edition, bedrock, pi edition, pi, 3ds edition, 3ds, Project Lodestone, MCS, ARC, savegame.dat, GRF, gamerule, PCK, MSSCMP, MCR, MCA, NBT, COL, LOC">
     <meta name="application-name" content="Project Lodestone">
     <link rel="canonical" href="https://team-lodestone.github.io">
+    <meta name="google-site-verification" content="LLV7ybaGj_-pAwlkHA2Cg55BxTOAdUdjG2WcoEuZKKM" />
   </head>
   <body>
     <div id="app"></div>
